--- a/schedule.qmd
+++ b/schedule.qmd
@@ -77,9 +77,9 @@ The schedule below is a guide to what we will be covering throughout the semeste
       An introduction to formulating a supervised machine learning problem. Stating the problem, creating the model, evaluating performance, and operationalizing the solution. </td>
     <td>ISL Ch. 1 + 2.1<br><a href="https://warpwire.duke.edu/w/aWQHAA/">Watch this lecture</a> </td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br> -->
-      <!-- <a href="https://github.com/ageron/handson-ml/blob/master/02_end_to_end_machine_learning_project.ipynb">[sample code]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br>
+      <a href="https://github.com/ageron/handson-ml/blob/master/02_end_to_end_machine_learning_project.ipynb">[sample code]</a>
     </td>
   </tr>
 
@@ -92,8 +92,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 2.2</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -105,8 +105,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1.ipynb">[assignment]</a><br>
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1_Q12_Example.ipynb">[sample Q12]</a><br>
-      [submit]
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <!-- [submit] -->
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
