--- a/schedule.qmd
+++ b/schedule.qmd
@@ -191,11 +191,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- Link to reading -->
       <a href="https://edstem.org/us/courses/50969/resources?download=33263">Link to reading</a>
-      <!-- <a href="https://edstem.org/us/courses/32544/resources?download=24417">Link to reading</a> -->
     </td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a>
     </td>
   </tr>
 
