--- a/schedule.qmd
+++ b/schedule.qmd
@@ -248,7 +248,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [assignment] <br> -->
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br>
-      [submit]
+      <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
@@ -262,8 +262,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL Ch 9: 9.1-9.4</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -337,8 +337,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #4 Due (at 9pm)</b><br>Neural Networks</td>
     <td></td>
     <td>
-      [assignment] <br>
-      [submit]
+      <!-- [assignment] <br> -->
+      <!-- [submit] -->
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a><br>
       <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a>
