--- a/schedule.qmd
+++ b/schedule.qmd
@@ -288,7 +288,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
       <b>Neural networks II</b> <br>
       Fitting a neural network to training data through gradient descent and backpropagation; how backpropagation is used to compute gradients in neural networks; hyperparameters and architecture choices in neural networks and practices for training neural networks warningfully
     </td>
-    <td>UDL Ch 3: 6.1; PRML Ch 5: 5.3.1, and <a href="http://colah.github.io/posts/2015-08-Backprop/">Calculus on Computational Graphs</a></td>
+    <td>UDL Ch 6: 6.1-6.2.2; PRML Ch 5: 5.3.1, and <a href="http://colah.github.io/posts/2015-08-Backprop/">Calculus on Computational Graphs</a></td>
     <td>
       [slides]
       <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture14_neural_networks_2.pdf">[slides]</a> -->
