--- a/schedule.qmd
+++ b/schedule.qmd
@@ -367,8 +367,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       [project] <br>
       [submit]
-      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br> -->
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br>
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
@@ -450,10 +450,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #5 Due (at 9pm)</b> <br> Kaggle Competition and Unsupervised Learning<br><b>Kaggle Competition Ends 9pm on Sun Mar 24</b></td>
     <td></td>
     <td>
-      [assignment] <br>
-      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br> -->
-      [submit]
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <!-- [assignment] <br> -->
+      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br>
+      <!-- [submit] -->
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
