--- a/schedule.qmd
+++ b/schedule.qmd
@@ -365,8 +365,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Project Proposal Due (at 9pm)</b></td>
     <td></td>
     <td>
-      [project] <br>
-      [submit]
+      <!-- [project] <br> -->
+      <!-- [submit] -->
       <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
