--- a/assignments/Assignment_5.ipynb
+++ b/assignments/Assignment_5.ipynb
@@ -111,7 +111,7 @@
     "################################\n",
     "# Load the data\n",
     "################################\n",
-    "data = pickle.load( open( \"./data/a5_q1.pkl\", \"rb\" ) )\n",
+    "data = pd.read_pickle(\"./data/a5_q1.pkl\")\n",
     "\n",
     "y_train = data['y_train']\n",
     "X_train_original = data['X_train'] # Original dataset\n",
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.0"
   },
   "nteract": {
    "version": "0.22.0"
