--- a/schedule.qmd
+++ b/schedule.qmd
@@ -493,8 +493,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 5: 5.1-5.3</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a>
     </td>
   </tr>
 
