--- a/schedule.qmd
+++ b/schedule.qmd
@@ -568,7 +568,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [project] -->
       <a href="https://kylebradbury.github.io/ids705/project.html#peer-evaluation">[project]</a><br>
-      [submit via emailed link]
+      [submit via TEAMMATES (see email)]
     </td>
   </tr>
 
@@ -580,7 +580,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [project] -->
       <a href="https://kylebradbury.github.io/ids705/project.html#github-repository">[project]</a><br>
-      [submit via emailed link from TEAMMATES]
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
