--- a/schedule.qmd
+++ b/schedule.qmd
@@ -55,7 +55,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>None</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture01_what_is_machine_learning.pdf">[slides]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture01_what_is_machine_learning.pdf">[slides]</a><br>
     </td>
   </tr>
 
@@ -84,7 +84,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL Ch. 1 + 2.1<br><a href="https://warpwire.duke.edu/w/aWQHAA/">Watch this lecture</a> </td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br>
       <a href="https://github.com/ageron/handson-ml/blob/master/02_end_to_end_machine_learning_project.ipynb">[sample code]</a>
     </td>
   </tr>
@@ -99,7 +99,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 2.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -109,8 +109,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #1 Due (at 9pm)</b><br> Probability, Linear Algebra, & Computational Programming</td>
     <td></td>
     <td>
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1.ipynb">[assignment]</a><br>
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1_Q12_Example.ipynb">[sample Q12]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_1.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_1_Q12_Example.ipynb">[sample Q12]</a><br>
       <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
@@ -126,7 +126,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL Intro of 3, 3.1, and 3.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture04_linear_models_1.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture04_linear_models_1.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -142,7 +142,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 3.3 and 3.5</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture05_linear_models_2.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture05_linear_models_2.pdf">[slides]</a>
     </td>
   </tr>
   
@@ -156,7 +156,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 4.1, 4.2, and 4.3</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture06_performance_evaluation_1.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture06_performance_evaluation_1.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -170,7 +170,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 5.1 and 5.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -181,7 +181,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br>
       <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
@@ -200,7 +200,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -214,7 +214,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 6.1 and 6.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture09_regularization.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture09_regularization.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -228,7 +228,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 4.4 and 4.5</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture10_generative_classification.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture10_generative_classification.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -242,7 +242,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 8.1 and 8.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture11_trees_and_ensembles.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture11_trees_and_ensembles.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -253,7 +253,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br>
       <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
@@ -269,7 +269,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL Ch 9: 9.1-9.4</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -283,7 +283,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>UDL Ch 3: 3.1, 3.2; PRML Ch 5: 5.1 </td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture13_neural_networks_1.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture13_neural_networks_1.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -297,7 +297,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>UDL Ch 6: 6.1-6.2.2; PRML Ch 5: 5.3.1, and <a href="http://colah.github.io/posts/2015-08-Backprop/">Calculus on Computational Graphs</a></td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture14_neural_networks_2.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture14_neural_networks_2.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -311,7 +311,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>DL Ch 11: Practical Methodology</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -333,7 +333,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 6.3, 6.4, 12.1, and 12.2 </td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -345,7 +345,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [assignment] <br> -->
       <!-- [submit] -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a><br>
       <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a>
     </td>
@@ -361,7 +361,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>ISL 12.4</td>
     <td>
       [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a> -->
+      <!-- <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -373,7 +373,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [project] <br> -->
       <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html#proposal">[project]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
@@ -396,7 +396,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>DM Ch 7 (<a href="https://www-users.cs.umn.edu/~kumar001/dmbook/ch7_clustering.pdf">link</a>): Intro, 7.1 and 7.2</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -410,7 +410,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
    <td>DM Ch 7 (<a href="https://www-users.cs.umn.edu/~kumar001/dmbook/ch7_clustering.pdf">link</a>): 7.3 and 7.4</td>
    <td>
      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture19_clustering_2.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture19_clustering_2.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -432,7 +432,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>RL Ch 1: 1.1-1.6; Ch 2: 2.1-2.5</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture20_reinforcement_learning_1.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture20_reinforcement_learning_1.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -446,7 +446,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>RL Ch 3</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture21_reinforcement_learning_2.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture21_reinforcement_learning_2.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -457,7 +457,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br>
       <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
@@ -473,7 +473,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>RL Ch 4</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -485,7 +485,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [project] <br> -->
       <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html#finalreport">[project]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
@@ -500,7 +500,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>RL Ch 5: 5.1-5.3</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -522,7 +522,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>None</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -536,7 +536,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>None</td>
     <td>
       <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture25_machine_learning_frontiers.pdf">[slides]</a>
+      <a href="https://github.com/kylebradbury/ids705_2024/raw/main/lectures/lecture25_machine_learning_frontiers.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -549,7 +549,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [project] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html">[project]</a>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html">[project]</a>
     </td>
   </tr>
 
@@ -561,7 +561,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [project] <br> -->
       <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#final-report">[project]</a><br>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html#final-report">[project]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
@@ -573,7 +573,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [project] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#peer-evaluation">[project]</a><br>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html#peer-evaluation">[project]</a><br>
       [submit via TEAMMATES (see email)]
     </td>
   </tr>
@@ -585,7 +585,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [project] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#github-repository">[project]</a><br>
+      <a href="https://kylebradbury.github.io/ids705_2024/project.html#github-repository">[project]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
@@ -597,7 +597,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       <!-- [assignment] -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br>
+      <a href="https://github.com/kylebradbury/ids705_2024/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br>
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
